tests/parser/should_fail/type_annotation_2.csp
f :: Int
f = 1

f :: Int
